--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Merriweather', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f8f9fa;
